# djangocms-page-sitemap

./: .bumpversion.cfg  .checkignore  .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  70.patch  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  addon.json  aldryn_config.py  cms_helper.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
.tx/: config
changes/: 121.feature  123.bugfix  63.feature  64.feature  67.bugfix  73.bugfix  74.feature  82.feature  910.feature
djangocms_page_sitemap/: __init__.py  addon.json  admin.py  cms_toolbar.py  cms_toolbars.py  models.py  settings.py  sitemap.py  sitemap_urls.py  utils.py
djangocms_page_sitemap/locale/ar/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/it/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/lt/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/ru/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/locale/tr/LC_MESSAGES/: django.mo  django.po
djangocms_page_sitemap/migrations/: 0001_initial.py  0002_auto_20151018_1451.py  0003_auto_20151018_1612.py  0004_auto_20180202_1044.py  0004_auto_20190504_1423.py  0005_auto_20180324_1050.py  0005_auto_20190804_1251.py
djangocms_page_sitemap/south_migrations/: 0001_initial.py  0002_auto__add_field_pagesitemapproperties_include_in_sitemap.py
djangocms_page_sitemap/templatetags/: robots_index.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  base.py  test_models.py  test_sitemap.py  test_toolbar.py
tests/requirements/: dj32_cms40.txt  dj42_cms40.txt  requirements_base.txt
tests/test_utils/: urls.py
