[metadata]
name = djangocms-page-sitemap
version = attr: djangocms_page_sitemap.__version__
url = https://github.com/nephila/djangocms-page-sitemap
project_urls =
	Documentation = https://djangocms-page-sitemap.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.digital
description = django CMS page extension to handle sitemap customization
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
keywords = django cms, sitemap, django-app-enabler addon
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Framework :: Django
	Framework :: Django :: 4.2
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	django-cms>=3.11
setup_requires =
	setuptools
packages = djangocms_page_sitemap
python_requires = >=3.10
zip_safe = False
test_suite = cms_helper.run

[options.package_data]
* = *.txt, *.rst
djangcms_page_sitemap = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	django<5.0

[bdist_wheel]
universal = 1
